--- a/src/viewer/mainwindow.ui
+++ b/src/viewer/mainwindow.ui
@@ -869,20 +869,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
               </widget>
              </item>
              <item>
-              <widget class="QSpinBox" name="scaleSpin">
-               <property name="minimum">
-                <number>1</number>
-               </property>
-               <property name="maximum">
-                <number>500</number>
-               </property>
-               <property name="singleStep">
-                <number>10</number>
-               </property>
-               <property name="value">
-                <number>100</number>
-               </property>
-              </widget>
+              <widget class="QDoubleSpinBox" name="scaleSpin"/>
              </item>
             </layout>
            </item>
