--- a/src/viewer/mainwindow.ui
+++ b/src/viewer/mainwindow.ui
@@ -52,12 +52,11 @@
                 <verstretch>0</verstretch>
                </sizepolicy>
               </property>
+              <property name="autoFillBackground">
+               <bool>false</bool>
+              </property>
               <property name="text">
                <string notr="true"/>
-              </property>
-              <property name="icon">
-               <iconset>
-                <normaloff>../.buttons/move.png</normaloff>../.buttons/move.png</iconset>
               </property>
               <property name="checkable">
                <bool>true</bool>
@@ -95,10 +94,7 @@
                </sizepolicy>
               </property>
               <property name="text">
-               <string>...</string>
-              </property>
-              <property name="icon">
-               <iconset theme="rotate.png"/>
+               <string/>
               </property>
               <property name="checkable">
                <bool>true</bool>
@@ -133,10 +129,7 @@
                </sizepolicy>
               </property>
               <property name="text">
-               <string>a</string>
-              </property>
-              <property name="icon">
-               <iconset theme="xyz.png"/>
+               <string/>
               </property>
               <property name="checkable">
                <bool>true</bool>
@@ -621,7 +614,10 @@ p, li { white-space: pre-wrap; }
              <item>
               <widget class="QDoubleSpinBox" name="moveXSpin">
                <property name="minimum">
-                <double>-99.989999999999995</double>
+                <double>-1000000.000000000000000</double>
+               </property>
+               <property name="maximum">
+                <double>1000000.000000000000000</double>
                </property>
               </widget>
              </item>
@@ -657,7 +653,10 @@ p, li { white-space: pre-wrap; }
              <item>
               <widget class="QDoubleSpinBox" name="moveYSpin">
                <property name="minimum">
-                <double>-99.989999999999995</double>
+                <double>-1000000.000000000000000</double>
+               </property>
+               <property name="maximum">
+                <double>1000000.000000000000000</double>
                </property>
               </widget>
              </item>
@@ -693,7 +692,10 @@ p, li { white-space: pre-wrap; }
              <item>
               <widget class="QDoubleSpinBox" name="moveZSpin">
                <property name="minimum">
-                <double>-99.989999999999995</double>
+                <double>-1000000.000000000000000</double>
+               </property>
+               <property name="maximum">
+                <double>1000000.000000000000000</double>
                </property>
               </widget>
              </item>
@@ -784,7 +786,10 @@ p, li { white-space: pre-wrap; }
              <item>
               <widget class="QDoubleSpinBox" name="rotateXSpin">
                <property name="minimum">
-                <double>-99.989999999999995</double>
+                <double>-1000000.000000000000000</double>
+               </property>
+               <property name="maximum">
+                <double>1000000.000000000000000</double>
                </property>
               </widget>
              </item>
@@ -820,7 +825,10 @@ p, li { white-space: pre-wrap; }
              <item>
               <widget class="QDoubleSpinBox" name="rotateYSpin">
                <property name="minimum">
-                <double>-99.989999999999995</double>
+                <double>-1000000.000000000000000</double>
+               </property>
+               <property name="maximum">
+                <double>1000000.000000000000000</double>
                </property>
               </widget>
              </item>
@@ -856,7 +864,10 @@ p, li { white-space: pre-wrap; }
              <item>
               <widget class="QDoubleSpinBox" name="rotateZSpin">
                <property name="minimum">
-                <double>-99.989999999999995</double>
+                <double>-1000000.000000000000000</double>
+               </property>
+               <property name="maximum">
+                <double>1000000.000000000000000</double>
                </property>
               </widget>
              </item>
